--- a/pinecone-101/pinecone101.ipynb
+++ b/pinecone-101/pinecone101.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Pinecone 101 Webinar\n",
-    "In this notebook, we will learn how to create and index, embed data into vectors, load the vectors, and execute queries."
+    "In this notebook, we will learn how to create and an index, load embedded vectors, and execute a query."
    ]
   },
   {
